# AIImageDetector

./: .gitignore  README.md  docker-compose.yaml  nginx.conf
.github/workflows/: deploy.yml  tests.yml
additional/frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.mjs
additional/frontend/src/: Router.tsx
additional/frontend/src/components/ColorSchemeToggle/: ColorSchemeToggle.tsx
additional/frontend/src/components/DropzoneButton/: DropzoneButton.module.css  DropzoneButton.tsx
additional/frontend/src/components/Header/: Header.tsx
additional/frontend/src/components/Welcome/: Welcome.module.css  Welcome.tsx
additional/frontend/src/pages/: Demo.page.tsx  Home.page.tsx  NotFound.page.tsx  Research.page.tsx
additional/research/: README.md  pyproject.toml
additional/research/results/Вторая итерация/: параметры.md
additional/research/results/Первые результаты/: параметры.md
additional/research/results/Третья итерация/: параметры.md
additional/research/results/Финальная итерация/: параметры.md
additional/research/results/Четвертая итерация/: параметры.md
additional/research/src/research/: AIImageDetector.ipynb  default_train.ipynb
additional/research/src/research/utils/: __init__.py  dataset.py  grad_cam.py  model.py  res_net_model.py  trainer.py
services/: docker-compose.yaml
services/api/: .dockerignore  Dockerfile  pyproject.toml
services/api/src/api/: __init__.py  app.py  run.py
services/api/src/api/routers/: detector.py
services/api/src/api/utils/: __init__.py  config.py
services/api/tests/: conftest.py  test_detect.py
services/detector/: Dockerfile  pyproject.toml
services/detector/src/detector/: app.py  run.py
services/detector/src/detector/handlers/: detect.py
services/detector/src/detector/utils/: __init__.py  broker.py  config.py  model.py
